<resources>
    <string name="app_name">LibraryApp</string>
    <string name="btn_fetch_all_books">Fetch all books</string>
    <string name="btn_create_new_book">Create New Book</string>
    <string name="btn_borrow">Borrow</string>
    <string name="btn_reviews">Reviews</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit_book">Edit Book</string>
    <string name="hint_search">Enter a book title,genre or author to search</string>
    <string name="hint_review_input">Share your thoughts about this book</string>
    <string name="hint_how_to_edit_book">Enter a new book parameter or leave it blank to keep the old one.</string>
    <string name="hint_new_book_title_input">Enter a new book title</string>
    <string name="hint_edit_genre_input">Select a new book genre</string>
    <string name="hint_new_book_author_input">Enter a new book author</string>
    <string name="hint_mark_as_favorite_switch">Enable to mark this book as a favorite.</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_edit_book">Edit Book</string>
    <string name="title_description">Description:</string>
    <string name="title_books_you_might_like">Books You Might Like:</string>
    <string name="title_available">Available:</string>
    <string name="title_details">Details</string>
    <string name="title_author">Author:</string>
    <string name="title_genre">Genre:</string>
    <string name="error_loading_book_details">Error loading book details</string>
    <string name="very_long_test_string">Verryyyyyyyyyyyyyyyyy loooooonnngggggggggg teeessstttttt ssssssssssstttttttttttrrrrrrrrrriiiiiiiinnnnnnnnggggg</string>
    <string name="very_very_long_test_string">
    Verryyyyyyyyyyyyyyyyy loooooonnngggggggggg teeessstttttt ssssssssssstttttttttttrrrrrrrrrriiiiiiiinnnnnnnnggggg
    Verryyyyyyyyyyyyyyyyy loooooonnngggggggggg teeessstttttt ssssssssssstttttttttttrrrrrrrrrriiiiiiiinnnnnnnnggggg
    Verryyyyyyyyyyyyyyyyy loooooonnngggggggggg teeessstttttt ssssssssssstttttttttttrrrrrrrrrriiiiiiiinnnnnnnnggggg
    Verryyyyyyyyyyyyyyyyy loooooonnngggggggggg teeessstttttt ssssssssssstttttttttttrrrrrrrrrriiiiiiiinnnnnnnnggggg
    Verryyyyyyyyyyyyyyyyy loooooonnngggggggggg teeessstttttt ssssssssssstttttttttttrrrrrrrrrriiiiiiiinnnnnnnnggggg</string>
    <string name="title_rating_of_author_s_books">Average Rating of Author\'s Books:</string>
    <string name="title_total_books">Total Books:</string>
    <string name="hint_are_you_sure_delete_selected">Are you sure you want \nto delete selected items?</string>
    <string name="heading_confirm_delete">Confirm delete</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_go_to_book_details">Go to book details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_test_api">Test Api</string>

</resources>