<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:background="@android:color/transparent"
    android:backgroundTint="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:background="@color/secondary_color"
        android:backgroundTint="@color/secondary_color">
    
        <TextView
            android:id="@+id/headingDeleteDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.H1.DayNight"
            android:text="@string/heading_confirm_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/hintDeleteDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Subtitle1.DayNight"

            android:text="@string/hint_are_you_sure_delete_selected"
            app:layout_constraintTop_toBottomOf="@id/headingDeleteDialogTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogCancel"
            style="@style/ButtonSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/btn_cancel"
            app:icon="@drawable/ic_cancel"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/btnDialogConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hintDeleteDialogTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogConfirm"
            style="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/btn_delete"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textEnd"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintDeleteDialogTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>